--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
 html,
 body {
   font-size: 62.5%;
-  min-height: 100%; }
+  min-height: 100%;
+  overflow-x: hidden; }
 
 body {
   line-height: 1.5;
@@ -54,6 +55,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  overflow: hidden;
   background-color: #fa7070; }
 
 .nav {
@@ -112,28 +114,37 @@ body {
 .event {
   width: 70%;
   height: 60.5%;
-  position: relative;
-  z-index: 999;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 8px 32px 0 rgba(61, 64, 105, 0.25);
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18); }
+  position: relative; }
+  .event-background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 11;
+    box-shadow: 0 8px 32px 0 rgba(61, 64, 105, 0.25);
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18); }
   .event__container {
     width: 92.5%;
     height: 83.5%;
     border-radius: 10px;
+    position: relative;
+    z-index: 12;
     display: flex;
     flex-direction: column;
     border: 3px solid #ff9a8b;
+    background: rgba(255, 255, 255, 0.02);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; }
     .event__container--info {
       height: 30%;
       border-radius: 10px 10px 0px 0px;
-      display: flex; }
+      display: flex;
+      position: relative;
+      z-index: 5; }
       .event__container--info_name {
         height: 100%;
         width: 65%;
@@ -141,7 +152,9 @@ body {
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        gap: 20px; }
+        gap: 20px;
+        position: relative;
+        z-index: 5; }
         .event__container--info_name-img {
           width: 55px;
           height: 55px;
@@ -230,30 +243,29 @@ body {
   border-radius: 100%;
   position: absolute;
   border: none;
-  left: 145px;
-  bottom: 10px;
+  left: -65px;
+  bottom: -40px;
   z-index: 1;
-  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
-  opacity: .8; }
-  .blob:nth-child(2) {
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%); }
+  .blob:nth-child(4) {
     width: 115px;
     height: 115px;
-    left: 600px;
+    left: 400px;
+    top: 45px;
     background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
     background-blend-mode: multiply, multiply;
-    top: 300px;
-    opacity: 1; }
+    opacity: 1;
+    z-index: 1; }
   .blob:nth-child(3) {
     width: 100px;
     height: 100px;
-    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-    left: 950px;
-    bottom: 20px;
-    opacity: .9; }
+    background-image: linear-gradient(120deg, #a0c4fd 0%, #c1e9fb 100%);
+    left: 750px;
+    bottom: -30px;
+    z-index: 1; }
 
 .second-section {
   width: 100%;
-  min-height: 200vh;
   background-color: #2e2e2e;
   position: relative;
   display: flex;
@@ -277,6 +289,7 @@ body {
 
 .team {
   width: 100%;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -304,17 +317,20 @@ body {
       color: #f5f5f5;
       text-align: center; }
       .team__cards-con-name {
-        position: relative;
+        position: absolute;
+        bottom: 0;
         z-index: 9999;
         width: 100%;
         height: auto;
         background-color: #8ec5fc;
         background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+        z-index: 4;
         height: 52px;
         border-radius: 0px 0px 10px 10px;
         display: flex;
         justify-content: center;
-        align-items: center; }
+        align-items: center;
+        overflow: hidden; }
         .team__cards-con-name > a {
           width: 25px;
           position: relative;
@@ -330,16 +346,13 @@ body {
           font-size: 2rem;
           text-transform: uppercase; }
       .team__cards-con > img {
-        border-radius: 10px 10px 0px 0px;
+        overflow: hidden;
+        width: 100%;
         position: relative;
         z-index: 1;
-        filter: grayscale(100%);
-        -webkit-filter: grayscale(100%);
         transition: all .3s ease; }
         .team__cards-con > img:hover {
-          filter: grayscale(0);
-          -webkit-filter: grayscale(0);
-          transform: scale(1.1); }
+          transform: scale(1.01); }
       .team__cards-con--overlay {
         border-radius: 10px;
         position: absolute;
@@ -354,6 +367,111 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center; }
+  .third-section_upcoming {
+    width: 100%;
+    text-align: center;
+    margin-top: 50px; }
+    .third-section_upcoming-events {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      flex-wrap: wrap;
+      width: 100%; }
+      .third-section_upcoming-events-card {
+        margin: 50px 0px;
+        width: 550px;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.27);
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
+        border-radius: 10px; }
+        .third-section_upcoming-events-card--info {
+          height: 30%;
+          border-radius: 10px 10px 0px 0px;
+          display: flex;
+          position: relative;
+          z-index: 5; }
+          .third-section_upcoming-events-card--info_name {
+            height: 100%;
+            width: 65%;
+            padding-left: 20px;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 10px;
+            position: relative;
+            z-index: 5; }
+            .third-section_upcoming-events-card--info_name-img {
+              width: 45px;
+              height: 45px;
+              padding: 10px;
+              border-radius: 999px;
+              background-color: #f5f5f5;
+              display: flex;
+              justify-content: center;
+              align-items: center; }
+              .third-section_upcoming-events-card--info_name-img > img {
+                position: absolute;
+                width: 30px; }
+            .third-section_upcoming-events-card--info_name-instagram {
+              color: #434343;
+              font-weight: 800;
+              font-size: 1.5rem;
+              text-align: start; }
+              .third-section_upcoming-events-card--info_name-instagram > h5 {
+                font-weight: 800; }
+              .third-section_upcoming-events-card--info_name-instagram > h3 {
+                font-weight: 800;
+                font-size: 1.3rem; }
+          .third-section_upcoming-events-card--info_id {
+            width: 35%;
+            height: 80%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            padding-right: 10px;
+            color: #f5f5f5;
+            font-size: 1.5rem;
+            background: #c4c3fb;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            clip-path: polygon(0 -1%, 103% -1%, 103% 103%, 27.5% 103%); }
+          .third-section_upcoming-events-card--info_event {
+            height: 70%;
+            display: flex;
+            text-align: start; }
+            .third-section_upcoming-events-card--info_event-left {
+              padding-left: 40px;
+              width: 50%;
+              overflow: scroll;
+              border-right: 1px solid #c4c3fb;
+              display: flex;
+              flex-direction: column;
+              gap: 20px;
+              justify-content: center;
+              align-items: flex-start; }
+              .third-section_upcoming-events-card--info_event-left-h5 {
+                text-transform: uppercase;
+                font-size: 1rem;
+                letter-spacing: 1.5px;
+                font-weight: 300; }
+              .third-section_upcoming-events-card--info_event-left-h2 {
+                text-transform: uppercase;
+                font-size: 1.25rem; }
+            .third-section_upcoming-events-card--info_event-right {
+              border-left: .5px solid #fe9a8b;
+              width: 50%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              overflow: scroll; }
+              .third-section_upcoming-events-card--info_event-right_content {
+                padding: 0px 40px;
+                font-size: 1rem; }
 
 .title {
   font-size: 4rem;
@@ -376,7 +494,7 @@ body {
   letter-spacing: 2px; }
 
 .vibrant {
-  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+  background-image: linear-gradient(62deg, #fbac7e 0%, #F7CE68 100%);
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -398,3 +516,39 @@ body {
   top: 50px;
   right: -200px;
   filter: blur(4px); }
+
+.line {
+  position: absolute;
+  width: 900px;
+  left: 0;
+  top: 300px; }
+
+.s-id {
+  background: #F7CE68; }
+
+.s-left {
+  border-right: 1px solid #F7CE68; }
+
+.p-card {
+  background: #434343; }
+
+.p-instagram {
+  color: #f5f5f5; }
+
+.p-info {
+  color: #f5f5f5; }
+
+.p-left {
+  border-right: 1px solid #fa7070; }
+  .p-left_s {
+    border-color: #00cdac; }
+  .p-left_th {
+    border-color: #8ec5fc; }
+
+.p-id {
+  background: #f5f5f5;
+  background: #fa7070; }
+  .p-id_s {
+    background: #00cdac; }
+  .p-id_th {
+    background: #8ec5fc; }
