--- a/sass/style.scss
+++ b/sass/style.scss
@@ -783,17 +783,82 @@ body {
     
               }
             }
-          }
-          
+          } 
         }
-          
-        
-        
       }
     }
   }
+}
 
-  
+.footer{
+  background: #434343;
+  color: $white-color;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 0px 30px 0px;
+
+  &_con{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    // border: 1px solid blue;
+
+    &--left{
+      // border: 1px solid red;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+
+      &-logo{
+        font-size: 3rem;
+        letter-spacing: 2px;
+        font-weight: 800;
+        background-image: linear-gradient(62deg, hsl(22, 94%, 74%) 0%, hsl(43, 90%, 69%) 100%);
+        background-size: 100%;  
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent; 
+        -moz-text-fill-color: transparent;
+      }
+
+      &-copyright{
+        font-size: 1rem;
+        letter-spacing: 2px;
+        font-family: sans-serif;
+
+      }
+    }
+
+    &--right{
+      // border: 1px solid red;
+      display: flex;
+      flex-direction: column;
+      color: #a6a6a6;
+      font-size: 1.7rem;
+      font-weight: 300;
+
+      & > h4 {
+        font-weight: 300;
+        margin-bottom: 5px;
+      }
+
+
+      & > a, & > a:active, & > a:visited {
+        color: $white-color;
+        text-decoration: none;
+
+
+        &:hover{
+          border-bottom: .2px solid $white-color;
+          
+        }
+      }
+    }
+  }
 }
 
 .title{
