--- a/css/style.css
+++ b/css/style.css
@@ -473,6 +473,52 @@ body {
                 padding: 0px 40px;
                 font-size: 1rem; }
 
+.footer {
+  background: #434343;
+  color: #f5f5f5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 0px 30px 0px; }
+  .footer_con {
+    width: 60%;
+    display: flex;
+    justify-content: space-between; }
+    .footer_con--left {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
+      .footer_con--left-logo {
+        font-size: 3rem;
+        letter-spacing: 2px;
+        font-weight: 800;
+        background-image: linear-gradient(62deg, #fbac7e 0%, #f7cf69 100%);
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-text-fill-color: transparent; }
+      .footer_con--left-copyright {
+        font-size: 1rem;
+        letter-spacing: 2px;
+        font-family: sans-serif; }
+    .footer_con--right {
+      display: flex;
+      flex-direction: column;
+      color: #a6a6a6;
+      font-size: 1.7rem;
+      font-weight: 300; }
+      .footer_con--right > h4 {
+        font-weight: 300;
+        margin-bottom: 5px; }
+      .footer_con--right > a, .footer_con--right > a:active, .footer_con--right > a:visited {
+        color: #f5f5f5;
+        text-decoration: none; }
+        .footer_con--right > a:hover, .footer_con--right > a:active:hover, .footer_con--right > a:visited:hover {
+          border-bottom: 0.2px solid #f5f5f5; }
+
 .title {
   font-size: 4rem;
   text-transform: uppercase;
