--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,8 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    cursor: pointer; }
+    cursor: pointer;
+    display: none; }
     .nav__button-line {
       width: 30px;
       height: 2.5px;
@@ -89,8 +90,7 @@ body {
     height: 100%;
     display: flex;
     justify-content: flex-end;
-    align-items: center;
-    display: none; }
+    align-items: center; }
     .nav__links--l, .nav__links--l:active, .nav__links:focus {
       font-size: 1.5rem;
       padding: 8px 25px;
@@ -99,7 +99,8 @@ body {
       text-transform: uppercase;
       letter-spacing: 1.2px;
       color: #f5f5f5;
-      font-weight: 700; }
+      font-weight: 700;
+      cursor: pointer; }
       .nav__links--l:nth-child(1), .nav__links--l:active:nth-child(1), .nav__links:focus:nth-child(1) {
         border-bottom: 1.5px solid #ff9a8b; }
       .nav__links--l:nth-child(2), .nav__links--l:active:nth-child(2), .nav__links:focus:nth-child(2) {
@@ -131,6 +132,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  transform: translateY(20px);
   position: relative; }
   .event-background {
     position: absolute;
@@ -148,6 +151,7 @@ body {
     border-radius: 10px;
     position: relative;
     z-index: 12;
+    opacity: 1;
     display: flex;
     flex-direction: column;
     border: 3px solid #ff9a8b;
@@ -612,3 +616,8 @@ body {
     background: #00cdac; }
   .p-id_th {
     background: #8ec5fc; }
+
+.show {
+  opacity: 1;
+  transform: translateY(0px);
+  transition: all .2s ease; }
