--- a/sass/style.scss
+++ b/sass/style.scss
@@ -101,6 +101,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     cursor: pointer;
+    display: none;
 
 
     &-line{
@@ -109,6 +110,8 @@ body {
       background-color: #434343;
       background-color: $white-color;
     }
+
+   
 
     
   }
@@ -120,7 +123,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    display: none;
+    // display: none;
 
     &--l,
     &--l:active,
@@ -134,6 +137,7 @@ body {
       letter-spacing: 1.2px;
       color: $white-color;
       font-weight: 700;
+      cursor: pointer;
 
       &:nth-child(1) {
         border-bottom: 1.5px solid #ff9a8b;
@@ -192,6 +196,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  transform: translateY(20px);
 
   // box-shadow: 0 8px 32px 0 rgba(61, 64, 105, 0.25);
   // backdrop-filter: blur(6px);
@@ -214,7 +220,7 @@ body {
     -webkit-backdrop-filter: blur(6px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
-  
+    // opacity: .1;
 
     
 
@@ -226,6 +232,8 @@ body {
     border-radius: 10px;
     position: relative;
     z-index: 12;
+    opacity: 1;
+
 
 
     display: flex;
@@ -1001,4 +1009,10 @@ body {
   &_th{
     background: #8ec5fc;
   }
+}
+
+.show{
+  opacity: 1;
+  transform: translateY(0px);
+  transition: all .2s ease;
 }
