--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,9 @@ body {
   width: 80%;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  transform: translateY(-60px);
+  opacity: 0; }
   .nav__logo {
     height: 100%;
     width: 120px;
@@ -78,8 +80,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    cursor: pointer;
-    display: none; }
+    cursor: pointer; }
     .nav__button-line {
       width: 30px;
       height: 2.5px;
@@ -90,7 +91,8 @@ body {
     height: 100%;
     display: flex;
     justify-content: flex-end;
-    align-items: center; }
+    align-items: center;
+    display: none; }
     .nav__links--l, .nav__links--l:active, .nav__links:focus {
       font-size: 1.5rem;
       padding: 8px 25px;
@@ -133,7 +135,7 @@ body {
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transform: translateY(20px);
+  transform: translateX(50px);
   position: relative; }
   .event-background {
     position: absolute;
@@ -264,7 +266,8 @@ body {
   left: -65px;
   bottom: -40px;
   z-index: 1;
-  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%); }
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+  filter: blur(4px); }
   .blob:nth-child(4) {
     width: 115px;
     height: 115px;
@@ -333,7 +336,9 @@ body {
       justify-content: space-between;
       align-items: center;
       color: #f5f5f5;
-      text-align: center; }
+      text-align: center;
+      transform: translateY(30px);
+      opacity: 0; }
       .team__cards-con-name {
         position: absolute;
         bottom: 0;
@@ -403,6 +408,8 @@ body {
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        transform: translateX(150px);
+        opacity: 0;
         box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.27);
         backdrop-filter: blur(4px);
         -webkit-backdrop-filter: blur(4px);
@@ -546,7 +553,9 @@ body {
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent; }
+  -moz-text-fill-color: transparent;
+  transform: translateY(60px);
+  opacity: 0; }
   .title:nth-child(1) {
     background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); }
   .title:nth-child(2) {
@@ -555,7 +564,9 @@ body {
 .sub-title {
   font-size: 1.2rem;
   text-transform: uppercase;
-  letter-spacing: 2px; }
+  letter-spacing: 2px;
+  transform: translateY(60px);
+  opacity: none; }
 
 .vibrant {
   background-image: linear-gradient(62deg, #fbac7e 0%, #F7CE68 100%);
@@ -617,7 +628,11 @@ body {
   .p-id_th {
     background: #8ec5fc; }
 
+.story-p {
+  transform: translateY(80px);
+  opacity: 0; }
+
 .show {
   opacity: 1;
-  transform: translateY(0px);
-  transition: all .2s ease; }
+  transform: translate(0px);
+  transition: all 1s ease; }
