try to fix the js file to be loaded when page is deployed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,8 +78,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // transform: translateY(-60px);s
-  // opacity: 0;
+  transform: translateY(-60px);
+  opacity: 0;
 
   &__logo {
 
