--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,9 @@ body {
   width: 80%;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  transform: translateY(-60px);
+  opacity: 0; }
   .nav__logo {
     height: 100%;
     width: 140px;
