--- a/sass/style.scss
+++ b/sass/style.scss
@@ -453,12 +453,6 @@ body {
   }
 }
 
-// .s{
-//   background: red;
-//   top: -20px;
-//   left: 400px;
-
-// }
 
 .second-section {
   width: 100%;
@@ -523,7 +517,7 @@ body {
     padding: 0px 100px;
 
     &-con{
-      width: 300px;
+      min-width: 300px;
       height: 425px;
       border-radius: 10px;
       position: relative;
@@ -536,6 +530,7 @@ body {
       text-align: center;
       transform: translateY(30px);
       opacity: 0;
+
 
       &-name{
         // position: absolute;
@@ -1122,6 +1117,12 @@ body {
     top: 150px;
     width: 100px;
   }
+
+  .blob {
+    &:nth-child(3) {
+      left: 550px;
+    }
+  }
 }
 
 
@@ -1172,6 +1173,18 @@ body {
       font-size: 1.75rem;
     }
   }
+
+  .blob {
+    &:nth-child(4) {
+      left: 300px;
+      top: 100px;
+
+    }
+    &:nth-child(3) {
+      left: 450px;
+    }
+  }
+
 }
 
 
@@ -1215,23 +1228,54 @@ body {
 
 
 @media screen and (max-width:500px) {
+
+  .first-section{
+    padding-top: 25px;
+    justify-content: flex-start;
+    gap: 15px;
+  }
   .event {
     width: 95%;
+    height: 70%;
     // transform: scale(.85);
   
     &__container {
   
       &--info {
 
+        &_id {
+
+          padding-right: 5px;
+          & > h4 {
+            margin-top: 22px;
+
+          }
+        }
+        &_name{
+          padding-left: 20px;
+          gap: 10px;
+
+          &-instagram{
+
+          
+          & > h3 {
+            display: none;
+          }
+        }
+        }
+
         &_event{
           &-left{
-
+            padding-left: 20px;
             
           }
   
           &-right{
             &_content{
+              padding-left: 20px;
+
               & > p {
+
                 font-size: 1.3rem;
               }
             }
@@ -1244,10 +1288,10 @@ body {
   .third-section{
     &_upcoming{
       &-events{
-        border: 1px solid red;
+
         display: block;
         &-card{
-          border: 1px solid red;
+
           width: 100%;
           height: 355px;
 
@@ -1255,10 +1299,16 @@ body {
           &--info{
 
             &_id{
+
+
               font-size: 1.25rem;
             }
 
             &_event{
+
+              &-left{
+                padding: 0px 20px;
+              }
 
           &-right{
             border-left: .5px solid #fe9a8b;
@@ -1293,5 +1343,114 @@ body {
       }
     }
   }
+
+  .title{
+    font-size: 3rem;
+  }
+
+  .blob {
+    &:nth-child(4) {
+      left: 270px;
+      width: 100px;
+      height: 100px;
+      top: 100px;
+
+    }
+    &:nth-child(3) {
+      width: 75px;
+      height: 75px;
+      left: 325px;
+    }
+  }
   
+}
+
+
+
+@media screen and (max-width:415px) {
+  .event {
+    width: 95%;
+
+  
+    &__container {
+  
+      &--info {
+
+        &_name{
+          // padding-left: 20px;
+
+          &-instagram{
+          
+            & > h5 {
+              font-size: 1.2rem;
+              margin-left: 0px;
+            }
+          
+          & > h3 {
+            display: none;
+          }
+        }
+        }
+
+        &_id{
+
+           & > h4 {
+
+            font-size: 1.2rem;
+           }
+        }
+
+        &_event{
+          &-left{
+            padding-left: 20px;
+
+            &-h5{
+              font-size: 1.1rem;
+             
+            }
+  
+            &-h2{
+              font-size: 2.2rem;  
+              &_second{
+                font-size: 1.5rem;
+              }
+              &_third{
+                font-size: 1.25rem;
+              }
+            }
+            
+          }
+  
+          &-right{
+
+            &_content{
+            padding-left: 20px;
+
+              & > p {
+
+                font-size: 1.1rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .team__cards-con{
+    transform: scale(.9);
+  }
+
+  .blob {
+    &:nth-child(4) {
+      left: 220px;
+
+
+    }
+    &:nth-child(3) {
+
+      left: 235px;
+    }
+  }
+
 }
