--- a/css/style.css
+++ b/css/style.css
@@ -324,8 +324,9 @@ body {
     gap: 30px;
     padding: 0px 100px; }
     .team__cards-con {
+      max-width: 300px;
       min-width: 300px;
-      height: 425px;
+      max-height: 425px;
       border-radius: 10px;
       position: relative;
       display: flex;
