--- a/sass/style.scss
+++ b/sass/style.scss
@@ -517,8 +517,9 @@ body {
     padding: 0px 100px;
 
     &-con{
+      max-width: 300px;
       min-width: 300px;
-      height: 425px;
+      max-height: 425px;
       border-radius: 10px;
       position: relative;
       display: flex;
