--- a/css/style.css
+++ b/css/style.css
@@ -681,10 +681,14 @@ body {
               font-size: 1.5rem; } }
 
 @media screen and (max-width: 840px) {
-  .nav__button {
-    display: flex; }
-  .nav__links {
-    display: none; }
+  .nav {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    height: 20%; }
+    .nav__links {
+      justify-content: center; }
   .story {
     width: 500px;
     width: 80%; }
@@ -744,7 +748,7 @@ body {
   .first-section {
     padding-top: 25px;
     justify-content: flex-start;
-    gap: 15px; }
+    gap: 25px; }
   .event {
     width: 95%;
     height: 70%; }
@@ -798,6 +802,12 @@ body {
     height: 75px;
     left: 325px; } }
 
+@media screen and (max-width: 450px) {
+  .nav__links--l {
+    font-size: 1.2rem; }
+    .nav__links--l:nth-child(2) {
+      margin: 15px; } }
+
 @media screen and (max-width: 415px) {
   .event {
     width: 95%; }
@@ -828,3 +838,8 @@ body {
     left: 220px; }
   .blob:nth-child(3) {
     left: 235px; } }
+
+@media screen and (max-width: 360px) {
+  .nav__links--l {
+    font-size: 1.1rem;
+    padding: 8px 15px; } }
